@@ -28,7 +28,6 @@ urq-already-researched=This technology is already researched
 urq-has-disabled-prerequisites=One or more prerequisites is disabled
 urq-queue-is-full=Research queue is full
 urq-recreated-gui=[Ultimate Research Queue] Something went wrong, so the GUI was re-created
-urq-research-completed=Research completed: [technology=__1__]
 urq-tech-is-disabled=This technology is disabled
 urq-too-many-prerequisites-queue-full=Too many prerequisites to fit in the research queue
 urq-too-many-unresearched-prerequisites=Too many unresearched prerequisites
