@@ -3,6 +3,7 @@ Version: 1.1.0
 Date: ????
   Changes:
     - The mod now uses built-in tooltips wherever possible. (#11)
+    - Removed research completion notifications as they are now built in to vanilla.
   Bugfixes:
     - Fixed a crash when a force is removed during migrations. (#16)
 ---------------------------------------------------------------------------------------------------
